Add webspecs testing
In addition:
 * fixed a database resource leak when openDirect is called in the same thread as open
 * correctly track open vs openDirect resources with resource tracker
 * Fixed bug with MonitorSecurity filter so that it checks all resolutions of the inet address of the white list against the remote server for check
 * Fixed a path issue in Format so that the full url is provided including host and port
 * Thread pool is enabled now by default.  Although I think that means some indexing needs to be done synchronously.  Particularly those related to updates.

git-svn-id: https://geonetwork.svn.sourceforge.net/svnroot/geonetwork/trunk@9122 ff403467-3f20-0410-99e5-ff581e626a08