@@ -1,21 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <groupId>org.geonetwork-opensource</groupId>
     <artifactId>geonetwork</artifactId>
     <version>2.7.0-SNAPSHOT</version>
   </parent>
-
-  <groupId>org.geonetwork-opensource</groupId>
   <artifactId>geonetwork-itest</artifactId>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
   <name>GeoNetwork Integration Tests</name>
   <description> GeoNetwork integration testsuite. </description>
-
   <licenses>
     <license>
       <name>General Public License (GPL)</name>
@@ -23,46 +17,97 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-
-  <dependencies>
-    <dependency>
-      <groupId>commons-httpclient</groupId>
-      <artifactId>commons-httpclient</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>xmlunit</groupId>
-      <artifactId>xmlunit</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>net.sf.saxon</groupId>
-      <artifactId>saxon-dom</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.geonetwork-opensource</groupId>
-      <artifactId>jeeves</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-  </dependencies>
-  
+  <properties>
+    <!-- logs to show.  Options are: 
+            RequestXml
+            Connection
+            Headers
+            RequestForm
+            RequestMPForm
+            LifeCycle
+            Constants
+            Warning
+            Error
+            Plugins
+            TextResponse -->
+    <logLevel>Error,Warning</logLevel>
+    <jettyPort>8010</jettyPort>
+    <testServer>localhost:${jettyPort}</testServer>
+    <geonetworkWar>${project.build.directory}/geonetworkWar</geonetworkWar>
+    <webspecsDir>${basedir}/webspecs</webspecsDir>
+  </properties>
   <build>
     <plugins>
+      <!-- Setup test environment
+          copy the war from the repository to (so that tests can be ran in a standalone mode)
+          check out webspecs (test framework)
+      -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.4</version>
+        <executions>
+          <execution>
+            <id>copy-geonetwork-war</id>
+            <phase>generate-test-resources</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <artifactItems>
+            <artifactItem>
+              <groupId>${project.groupId}</groupId>
+              <artifactId>geonetwork-main</artifactId>
+              <version>${project.version}</version>
+              <type>war</type>
+            </artifactItem>
+          </artifactItems>
+          <outputDirectory>${geonetworkWar}</outputDirectory>
+          <stripVersion>true</stripVersion>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <id>checkout test framework</id>
+            <phase>generate-test-resources</phase>
+            <goals>
+              <goal>checkout</goal>
+              <goal>update</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <checkoutDirectory>${webspecsDir}</checkoutDirectory>
+          <connectionUrl>scm:git:git://github.com/camptocamp/webspecs.git</connectionUrl>
+          <skipCheckoutIfExists>true</skipCheckoutIfExists>
+          <workingDirectory>${webspecsDir}</workingDirectory>
+          <basedir>${basedir}</basedir>
+        </configuration>
+      </plugin>
+      <!-- start jetty before integration tests and shut it down after -->
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
         <version>${jetty.version}</version>
-        <configuration>   
-	  <connectors>
-           <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-             <port>8010</port>
-             <maxIdleTime>60000</maxIdleTime>
-           </connector>
+        <configuration>
+          <connectors>
+            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+              <port>${jettyPort}</port>
+              <maxIdleTime>60000</maxIdleTime>
+            </connector>
           </connectors>
-	  <webApp>../web/target/geonetwork.war</webApp>
+          <webApp>${geonetworkWar}/geonetwork-main.war</webApp>
           <webAppConfig>
             <contextPath>/geonetwork</contextPath>
           </webAppConfig>
-	  <stopKey>GEONETWORK_STOP</stopKey>
-	  <stopPort>8011</stopPort>
+          <stopKey>GEONETWORK_ITEST_STOP</stopKey>
+          <stopPort>8011</stopPort>
         </configuration>
         <executions>
           <execution>
@@ -85,57 +130,44 @@
           </execution>
         </executions>
       </plugin>
+      <!-- execute integration tests -->
       <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.9</version>
-        <configuration>
-          <excludes>
-            <exclude>**/itest/**</exclude>
-          </excludes>
-        </configuration>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
         <executions>
           <execution>
-            <id>surefire-itest</id>
+            <id>run-sbt-tests</id>
             <phase>integration-test</phase>
             <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <excludes>
-                <exclude>none</exclude>
-              </excludes>
-              <includes>
-                <include>**/itest/**</include>
-              </includes>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.9</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
+              <goal>exec</goal>
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <executable>java</executable>
+          <arguments>
+            <argument>-Dfile.encoding=UTF8</argument>
+            <argument>-Dsbt.log.noformat=true</argument>
+            <argument>-Dwebspecs.config=${webspecsDir}/geonetwork/standard/src/test/resources/c2c/webspecs/geonetwork/defaultConfig.properties</argument>
+            <argument>-Dlogging_enabled=${logLevel}</argument>
+            <argument>-Dtest.server=${testServer}</argument>
+            <argument>-Dspecs2.junit.outDir=${project.build.directory}/surefire-reports</argument>
+            <argument>-Xmx1536M</argument>
+            <argument>-Xss10M</argument>
+            <argument>-XX:MaxPermSize=256m</argument>
+            <argument>-jar</argument>
+            <argument>sbt-launch.jar</argument>
+            <argument>geonetwork/test</argument>
+          </arguments>
+          <workingDirectory>${webspecsDir}</workingDirectory>
+        </configuration>
       </plugin>
-      <plugin>
+      <!--      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>2.9</version>
-      </plugin>
+      </plugin>-->
     </plugins>
   </build>
-
-  <properties>
-    <geonetwork.webapp.dir>${basedir}/src/main/webapp</geonetwork.webapp.dir>
-    <geonetwork.webapp.js.dir>${geonetwork.webapp.dir}/scripts</geonetwork.webapp.js.dir>
-    <geonetwork.build.dir>${project.build.directory}/${project.build.finalName}</geonetwork.build.dir>
-    <geonetwork.webapp.css.dir>${geonetwork.webapp.dir}</geonetwork.webapp.css.dir>
-    <minify.verbose>false</minify.verbose>
-  </properties>
 </project>
